--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "concat": "^1.0.3",
-    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^9.0.2"
+    "postcss-cli": "^9.0.2",
+    "sass": "^1.60.0"
   },
   "dependencies": {
     "live-server": "^1.2.1"
