--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   },
   "homepage": "https://github.com/saeed0920/start-css-modern-project#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.14",
     "concat": "^1.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^9.0.2",
-    "sass": "^1.60.0"
+    "postcss-cli": "^10.1.0",
+    "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.2"
   }
 }
